# internal/api/request/livekit.go
@@ -1,0 +1,6 @@
+package request
+
+type GenerateLivekitTokenRequest struct {
+	Room     string `json:"room" binding:"required" example:"interview-id-uuid"`
+	Identity string `json:"identity" binding:"required" example:"userId-uuid"`
+}
