# internal/api/response/livekit.go
@@ -1,0 +1,5 @@
+package response
+
+type GenerateLivekitTokenResponse struct {
+	Token string `json:"token" example:"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."`
+}
